making some changes

--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./styles2.css">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./output.css">
+    <!-- <link rel="stylesheet" href="./styles2.css"> -->
+    <script src="script.js"></script>
     <title>Document</title>
 </head>
-<body>
-    <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto consequatur nihil ad error saepe incidunt maiores pariatur, rerum eaque dolorem vero harum, porro quidem? Molestias inventore consequuntur error odio possimus?</p>
-    </div>
-    <div>Hello</div>
-    <div>Last changes</div>
+<body class="">
+
+    <section class="main">
+        <div class="container">
+            <h1 class="">Welcome to my portfolio</h1>
+            <p class="">I hope you have fun browsing</p>
+        </div>
+    </section>
+    <section class="section fade-in">
+        <h2 class="section-header">This is my workdone.</h2>
+        <ul class="items">
+            <li>Work 1</li>
+            <li>Work 2</li>
+            <li>Work 3</li>
+            <li>Work 4</li>
+        </ul>
+    </section>
+    <section class="footer fade-in">
+        <h3> This is my contact information.</h3>
+    </section>
 </body>
 </html>
