--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,6 @@
         <h3> This is my contact information.</h3>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 </html>
